Fix the background image not covering entire screen

--- a/frontend/app.css
+++ b/frontend/app.css
@@ -38,10 +38,12 @@ body {
   background: url(./images/Jedi_Archives.png) center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  /* width: 100vw; */
 }
 
 #create-box {
